kompose/loadbalancer/.k8s/loadbalancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ./compose/loadbalancer/docker-compose.yml --out ./kompose/loadbalancer/.k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: loadbalancer
  name: loadbalancer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loadbalancer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ./compose/loadbalancer/docker-compose.yml --out ./kompose/loadbalancer/.k8s/
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/node-haproxy-network: "true"
        io.kompose.service: loadbalancer
    spec:
      containers:
        - image: loadbalancer
          name: loadbalancer
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
