kompose/loadbalancer/.k8s/node2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ./compose/loadbalancer/docker-compose.yml --out ./kompose/loadbalancer/.k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: node2
  name: node2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ./compose/loadbalancer/docker-compose.yml --out ./kompose/loadbalancer/.k8s/
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/node-haproxy-network: "true"
        io.kompose.service: node2
    spec:
      containers:
        - image: node2
          name: node2
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
