kompose/loadbalancer/.k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file ./compose/loadbalancer/docker-compose.yml --out ./kompose/loadbalancer/.k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: loadbalancer
  name: loadbalancer
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: loadbalancer
status:
  loadBalancer: {}
