kompose/loadbalancer/.k8s/node-haproxy-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: node-haproxy-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/node-haproxy-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/node-haproxy-network: "true"
